--- a/config/development.sphinx.conf
+++ b/config/development.sphinx.conf
@@ -20,7 +20,7 @@ source article_core_0
   sql_pass = 
   sql_db = blog_development
   sql_query_pre = SET TIME_ZONE = '+0:00'
-  sql_query = SELECT SQL_NO_CACHE `articles`.`id` * 1 + 0 AS `id`, `articles`.`content` AS `content`, `articles`.`name` AS `name`, GROUP_CONCAT(comments.`content` SEPARATOR ' ') AS `comment_content`, authors.`first_name` AS `author_name`, `articles`.`id` AS `sphinx_internal_id`, 'Article' AS `sphinx_internal_class`, 0 AS `sphinx_deleted`, `articles`.`author_id` AS `author_id`, UNIX_TIMESTAMP(`articles`.`created_at`) AS `created_at` FROM `articles` LEFT OUTER JOIN `comments` ON `comments`.`article_id` = `articles`.`id` LEFT OUTER JOIN `authors` ON `authors`.`id` = `articles`.`author_id` WHERE (`articles`.`id` BETWEEN $start AND $end) GROUP BY `articles`.`id`, `articles`.`content`, `articles`.`name`, authors.`first_name`, `articles`.`id`, `articles`.`author_id`, `articles`.`created_at`  ORDER BY NULL
+  sql_query = SELECT SQL_NO_CACHE `articles`.`id` * 2 + 0 AS `id`, `articles`.`content` AS `content`, `articles`.`name` AS `name`, GROUP_CONCAT(comments.`content` SEPARATOR ' ') AS `comment_content`, authors.`first_name` AS `author_name`, `articles`.`id` AS `sphinx_internal_id`, 'Article' AS `sphinx_internal_class`, 0 AS `sphinx_deleted`, `articles`.`author_id` AS `author_id`, UNIX_TIMESTAMP(`articles`.`created_at`) AS `created_at` FROM `articles` LEFT OUTER JOIN `comments` ON `comments`.`article_id` = `articles`.`id` LEFT OUTER JOIN `authors` ON `authors`.`id` = `articles`.`author_id` WHERE (`articles`.`id` BETWEEN $start AND $end) GROUP BY `articles`.`id`, `articles`.`content`, `articles`.`name`, authors.`first_name`, `articles`.`id`, `articles`.`author_id`, `articles`.`created_at`  ORDER BY NULL
   sql_query_range = SELECT IFNULL(MIN(`articles`.`id`), 1), IFNULL(MAX(`articles`.`id`), 1) FROM `articles`
   sql_attr_uint = sphinx_internal_id
   sql_attr_uint = sphinx_deleted
@@ -28,7 +28,7 @@ source article_core_0
   sql_attr_timestamp = created_at
   sql_attr_string = sphinx_internal_class
   sql_field_string = name
-  sql_query_info = SELECT `articles`.* FROM `articles`  WHERE (`articles`.`id` = ($id - 0) / 1)
+  sql_query_info = SELECT `articles`.* FROM `articles`  WHERE (`articles`.`id` = ($id - 0) / 2)
 }
 
 index article_core
@@ -38,4 +38,31 @@ index article_core
   docinfo = extern
   charset_type = utf-8
   source = article_core_0
+}
+
+source comment_core_0
+{
+  type = mysql
+  sql_host = localhost
+  sql_user = root
+  sql_pass = 
+  sql_db = blog_development
+  sql_query_pre = SET TIME_ZONE = '+0:00'
+  sql_query = SELECT SQL_NO_CACHE `comments`.`id` * 2 + 1 AS `id`, `comments`.`content` AS `content`, `comments`.`author_name` AS `author_name`, `comments`.`id` AS `sphinx_internal_id`, 'Comment' AS `sphinx_internal_class`, 0 AS `sphinx_deleted`, `comments`.`article_id` AS `article_id` FROM `comments`  WHERE (`comments`.`id` BETWEEN $start AND $end) GROUP BY `comments`.`id`, `comments`.`content`, `comments`.`author_name`, `comments`.`id`, `comments`.`article_id`  ORDER BY NULL
+  sql_query_range = SELECT IFNULL(MIN(`comments`.`id`), 1), IFNULL(MAX(`comments`.`id`), 1) FROM `comments`
+  sql_attr_uint = sphinx_internal_id
+  sql_attr_uint = sphinx_deleted
+  sql_attr_uint = article_id
+  sql_attr_string = sphinx_internal_class
+  sql_field_string = author_name
+  sql_query_info = SELECT `comments`.* FROM `comments`  WHERE (`comments`.`id` = ($id - 1) / 2)
+}
+
+index comment_core
+{
+  type = plain
+  path = /home/webonise/Projects/thinking_sphinx_app/db/sphinx/development/comment_core
+  docinfo = extern
+  charset_type = utf-8
+  source = comment_core_0
 }
